--- a/log in/styles.css
+++ b/log in/styles.css
@@ -248,8 +248,8 @@ a:hover {
   margin: auto;
   padding-top: 68px;
   padding-bottom: 48px;
-  background: url("/images/IETE\ BLACK\ -\ Copy3.png");
-  background-image: url("/images/IETE\ BLACK\ -\ Copy3.png");
+  background: url("./images/IETE\ BLACK\ -\ Copy3.png");
+  background-image: url("./images/IETE\ BLACK\ -\ Copy3.png");
   background-repeat: no-repeat;
   background-position: center;
   background-size: 60%; }
@@ -281,14 +281,16 @@ padding-top: 10px; }
     display: block; }
 
 .form-control {
-  border: 1px solid #ccc;
+  border: 0;
+  outline: 0;
+  border-bottom: 1px solid #ccc;
   display: block;
   width: 100%;
   height: 40px;
   padding: 0 20px;
-  border-radius: 20px;
+ border-radius: 0;
   font-family: "Muli-Bold";
-  background: none; }
+  background-color: #091a4600; }
   .form-control:focus {
     border: 1px solid #ae3c33; }
 
@@ -316,7 +318,7 @@ button {
   color: #213159;
   text-transform: uppercase;
   font-family: "Muli-SemiBold";
-  border-radius: 20px;
+  border-radius: 10px;
   overflow: hidden;
   -webkit-transform: perspective(1px) translateZ(0);
   transform: perspective(1px) translateZ(0);
