--- a/log in/styles.css
+++ b/log in/styles.css
@@ -248,11 +248,7 @@ a:hover {
   margin: auto;
   padding-top: 68px;
   padding-bottom: 48px;
-  background: url("./images/IETE\ BLACK\ -\ Copy3.png");
-  background-image: url("./images/IETE\ BLACK\ -\ Copy3.png");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: 60%; }
+   }
   .inner h3 {
     text-transform: uppercase;
     font-size: 22px;
